tests/lean/termination_by.lean.expected.out
termination_by.lean:8:2-8:23: error: unused `termination_by`, function is not recursive
termination_by.lean:11:16-11:21: error: unused `decreasing_by`, function is not recursive
termination_by.lean:14:2-15:21: error: unused termination hints, function is not recursive
termination_by.lean:18:2-18:23: error: unused `termination_by`, function is partial
termination_by.lean:21:16-21:21: error: unused `decreasing_by`, function is partial
termination_by.lean:24:2-25:21: error: unused termination hints, function is partial
termination_by.lean:28:0-28:21: error: unused `termination_by`, function is unsafe
termination_by.lean:31:16-31:21: error: unused `decreasing_by`, function is unsafe
termination_by.lean:34:2-35:21: error: unused termination hints, function is unsafe
termination_by.lean:39:4-39:25: error: unused `termination_by`, function is not recursive
termination_by.lean:43:4-43:25: error: unused `termination_by`, function is not recursive
termination_by.lean:53:2-53:23: error: unused `termination_by`, function is not recursive
termination_by.lean:63:6-63:11: error: Missing `termination_by`; this function is mutually recursive with isEven, which has a `termination_by` clause.
termination_by.lean:80:6-80:7: error: Missing `termination_by`; this function is mutually recursive with Test.f, which has a `termination_by` clause.
